# RSstitcher

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  rsstitcher.spec
.github/workflows/: ci.yml  deploy-web.yml  pyinstaller.yml
rsstitcher/: __init__.py  __main__.py  experiment.py  instrument.py  main.py
rsstitcher/instruments/: README.md  bruker_gfrm.json  rigaku_img.json
tests/: test_cli.py
tests/data/bruker_symmetric/: WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-000.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-001.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-002.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-003.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-004.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-005.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-006.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-007.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-008.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-009.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-010.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-011.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-012.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-013.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-014.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-015.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-016.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-017.gfrm  WR-RSM_2D_15-125-0.1-1100s_50Chi_2Phi-018.gfrm  (+81 more)
web/: .gitignore  build-fabio-wheel.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite-plugin-rsstitcher-wheel.ts  vite.config.ts
web/src/: App.tsx  outputUtils.ts  sampleDatasets.ts
(+62 files in other folders)
