[project]
name = "rsstitcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabio>=2024.9.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "simpleeval>=1.0.7",
    "tifffile>=2025.9.30",
]

[project.scripts]
rsstitcher = "rsstitcher.main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rsstitcher"]

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
